@@ -252,8 +252,8 @@ def dependencies(target):
         ffmpeg_options = {}
 
     return (('ffmpeg-cdist', 'd0986a9', ffmpeg_options),
-            ('libdcp', 'de32e99'),
-            ('libsub', '2d6d0e0'))
+            ('libdcp', '3c7d752'),
+            ('libsub', '3ed0ae0'))
 
 def configure_options(target):
     opt = ''
