@@ -1,3 +1,7 @@
+2015-10-04  Carl Hetherington  <cth@carlh.net>
+
+	* Fix subtitle timing under trim.
+
 2015-10-02  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.3.13 released.
